fixed header overlap

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -16,6 +16,7 @@ header{
 	position:fixed;
 	width:100%;
 	z-index:100;
+	height:90px;
 }
 footer{
     bottom: 15px;
@@ -134,6 +135,7 @@ h1.logo a, h1.logo a:hover {
 	cursor: -webkit-zoom-in; 
 	cursor: -moz-zoom-in;
 }
+
 
 .slides li{
 	-webkit-border-radius: 2px;
